# colorama

./: .gitmodules  CMakeLists.txt  README.md  colorama.pc.in
.github/workflows/: tests.yaml
include/: color.h  colorspace.h  observer.h  spectrum.h  whitepoint.h
src/: color.cpp  colorspace.cpp  observer.cpp  spectrum.cpp  whitepoint.cpp
tests/: CMakeLists.txt  color.cpp
